[package]
name = "jsonwebtoken"
version = "4.0.0"
authors = ["Vincent Prouillet <prouillet.vincent@gmail.com>"]
license = "MIT"
readme = "README.md"
description = "Create and parse JWT in a strongly typed way."
homepage = "https://github.com/Keats/rust-jwt"
repository = "https://github.com/Keats/rust-jwt"
keywords = ["jwt", "web", "api", "token", "json"]

[dependencies]
error-chain = { version = "0.11.0", default-features = false }
serde_json = "1.0.9"
serde_derive = "1.0.27"
serde = "1.0.27"
ring = { version = "0.13.0-alpha", features = ["rsa_signing", "dev_urandom_fallback"] }
base64 = "0.9.0"
untrusted = "0.6.1"
chrono = "0.4.0"
